# contig

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  LICENSE  NOTICE  README.md  RELEASING.md  SECURITY.md  VISION.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  failure_case.md  feature_request.md
.github/workflows/: ci.yml  release.yml
dashboard/: .dockerignore  Dockerfile  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: page-header.tsx  run-test-profile-button.tsx  site-nav.tsx  status-badge.tsx
dashboard/e2e/: approval-gate.spec.ts  auth-gate.spec.ts  benchmark.spec.ts  choice-gate.spec.ts  compare.spec.ts  concordance-qc.spec.ts  corpus-insights.spec.ts  corroborated-by.spec.ts  detector-compare.spec.ts  detector-selector.spec.ts  dispatch.spec.ts  estimate.spec.ts  eval-history.spec.ts  explain.spec.ts  export-provenance.spec.ts  (+21 more)
demo/: DEMO.md  OUTREACH.md  WHAT_THIS_PROVES.md  make_sample_run.py  sample-report.html
deploy/: Caddyfile  ENV.md  nginx.conf
docs/: RESEARCH_FINDINGS.md  ROADMAP.md  USAGE.md
homebrew/: contig.rb
packaging/: contig_main.py
tests/: test_annotation_integration.py  test_annotation_lifecycle.py  test_annotation_provenance.py  test_annotation_registry.py  test_annotation_somatic_gate.py  test_benchmark.py  test_bundle.py  test_claim_extraction.py  test_claim_extraction_llm.py  test_cli.py  test_cli_benchmark.py  test_cli_extract_claims.py  test_cli_heal_guard.py  test_cli_insight.py  test_cli_reproduce.py  test_contig_aliases.py  test_corpus.py  test_corpus_insight.py  test_cost.py  test_datashape.py  test_detect.py  test_detect_llm.py  test_estimate.py  test_eval_history.py  test_eval_holdout.py  test_events.py  test_guard_trend.py  test_heal_guard.py  test_heal_scenarios.py  test_lifecycle.py  test_methods.py  test_models.py  test_nfconfig.py  test_notify.py  test_planner.py  test_progress.py  test_provenance.py  test_reference.py  test_reference_check.py  test_reference_harmonize.py  (+26 more)
(+476 files in other folders)
