[project]
name = "contig"
version = "0.11.0"
description = "Agentic bioinformatics analyst: Layer 2 execution/verification/reproducibility engine"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "cryptography>=42.0",
]

[project.scripts]
contig = "contig.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contig"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
